refactor: cut over-engineering repo-wide (ponytail audit)